Добавить модуль аутентификации с поддержкой Firebase и обновить зависимости. Изменения включают внедрение новых классов для аутентификации, обновление репозиториев и добавление методов для работы с пользователями. Эти изменения направлены на улучшение управления сессиями и интеграцию с Firebase для аутентификации пользователей.